k8s/chargeops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chargeops
  labels:
    name: chargeops
