k8s/chargeops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
  namespace: prod
  labels:
    app: ai-service
spec:
  type: ClusterIP
  selector:
    app: ai-service
  ports:
    - name: http
      port: 3000
      targetPort: http
    - name: http-gateway
      port: 8008
      targetPort: http
